# workflow-orchestration-queue-zulu78-a

./: .ai-repository-summary.md  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/.devcontainer/: devcontainer.json
.github/workflows/.disabled/: agent-runner.yml
.workflow-checkpoints/: progress-report-002.md  progress-report-create-agents-md-file.md  progress-report-create-project-structure.md  progress-report-debrief-and-document.md  progress-report-report-progress.md  project-setup-checkpoint-002.json  project-setup-checkpoint-003.json  project-setup-checkpoint-004.json  project-structure-verification.md
.workflow-state/checkpoints/: checkpoint-001.json
.workflow-state/progress-reports/: 001-init-existing-repository.md
debrief-and-document/: report.md  trace.md
docs/: REPOSITORY_SETUP.md  architecture.md  development-plan.md  environment-setup.md  implementation-plan.md  implementation-specification.md
docs/api/: README.md
docs/architecture/: README.md
docs/epic-reports/: epic-0.1-debrief.md  project-setup-debrief.md
docs/runbooks/: README.md
docs/validation/: REMEDIATION_GUIDE.md  VALIDATION_REPORT_create-agents-md-file_2026-04-06.md  VALIDATION_REPORT_create-app-plan_20260406.md  VALIDATION_REPORT_create-project-structure_2026-04-06.md  VALIDATION_REPORT_debrief-and-document_20260406-013346.md  VALIDATION_REPORT_init-existing-repository_2026-04-06T00-33-38Z.md
plan_docs/: architecture.md  interactive-report.html  pr-approval-merge-plan.md  tech-stack.md  workflow-plan.md
scripts/: validate.ps1
src/: __init__.py  notifier_service.py  orchestrator_sentinel.py
src/models/: __init__.py  work_item.py
src/os_apow/: __init__.py  config.py  main.py
src/os_apow/api/: __init__.py  deps.py
src/os_apow/api/routes/: __init__.py  webhooks.py
src/os_apow/models/: __init__.py  work_item.py
src/os_apow/services/: __init__.py  github_client.py  queue.py  worker.py
src/os_apow/utils/: __init__.py  logging.py
src/queue/: __init__.py  github_queue.py  interfaces.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_services.py
tests/models/: test_work_item.py
tests/queue/: test_github_queue.py
tests/test_api/: __init__.py  test_webhooks.py
tests/test_models/: __init__.py  test_work_item.py
tests/test_services/: __init__.py  test_queue.py
tests/unit/: test_github_queue.py  test_interfaces.py  test_work_item.py
